Se conectó el componente Siderbar con las rutas

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -83,6 +83,12 @@ nav a.about-link:after {
 nav a.contact-link:after {
     content: "CONTACT";
 }
+nav a.resume-link:after {
+    content: "RESUME";
+}
+nav a.projects-link:after {
+    content: "PROJECTS";
+}
 nav a.active svg {
     color: #ffd700;
 }
