--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -42,6 +42,7 @@ nav {
     margin-top: -120px;
     width: 100%;
 }
+
 nav a {
     font-size: 22px;
     color: #4d4d4e;
@@ -50,18 +51,23 @@ nav a {
     position: relative;
     text-decoration: none;
 }
+
 nav a i {
     transition: all 0.3s ease-out;
 }
+
 nav a:hover {
     color: #ffd700;
 }
+
 nav a:hover svg {
     opacity: 0;
 }
+
 nav a:hover:after {
     opacity: 1;
 }
+
 nav a:after {
     content: "";
     font-size: 9px;
@@ -74,21 +80,27 @@ nav a:after {
     opacity: 0;
     transition: all 0.3s ease-out;
 }
+
 nav a:first-child:after {
     content: "HOME";
 }
+
 nav a.about-link:after {
     content: "ABOUT";
 }
+
 nav a.contact-link:after {
     content: "CONTACT";
 }
+
 nav a.resume-link:after {
     content: "RESUME";
 }
+
 nav a.projects-link:after {
     content: "PROJECTS";
 }
+
 nav a.active svg {
     color: #ffd700;
 }
@@ -103,6 +115,7 @@ ul {
     text-align: center;
     margin: 0;
 }
+
 ul li a {
     padding: 7px 0;
     display: block;
@@ -110,6 +123,19 @@ ul li a {
     line-height: 16px;
     color: #4d4d4e;
 }
+
 ul li a:hover svg {
+    color: #ffd700;
+}
+
+ul li .copy_nav{
+    padding: 7px 0;
+    display: block;
+    font-size: 15px;
+    line-height: 16px;
+    color: #4d4d4e;
+}
+
+ul li .copy_nav:hover svg {
     color: #ffd700;
 }
