--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,6 +3,15 @@
     overflow: auto;
 }
 
+.home-container::-webkit-scrollbar{
+    width: 7px;
+}
+
+.home-container::-webkit-scrollbar-thumb{
+    background: #181818;
+    border-radius: 5px;
+}
+
 .info{
     height: 100%;
     width: 100%;
@@ -10,7 +19,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: aqua;
 }
 
 .photo{
@@ -19,7 +27,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blue
 }
 
 .button-info{
