Se hizo la ventana de los proyectos

--- a/src/components/ListCard/ListCard.css
+++ b/src/components/ListCard/ListCard.css
@@ -1,5 +1,7 @@
 .the-list{
     overflow: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
