--- a/src/components/CardItem/CardItem.css
+++ b/src/components/CardItem/CardItem.css
@@ -4,5 +4,5 @@
 
 .the-card:hover{
     cursor: pointer;
-    box-shadow: inset 0 -3em 3em rgb(0 0 0 / 10%), 0 0 0 2px rgb(255 255 255), 0.3em 0.3em 1em rgb(0 0 0 / 30%);
+    box-shadow: 0px 0px 10px 4px#ffd700;
 }
