--- a/src/components/CardProject/CardProject.css
+++ b/src/components/CardProject/CardProject.css
@@ -3,6 +3,7 @@
     height: 250px;
     border-radius: 20px;
 
+    background: #f7f2d7;
     background-image: url(../../assets/images/fondo.webp);
     background-size: cover;
     border: 1px solid #ffd700;
@@ -13,6 +14,7 @@
 
     text-transform: uppercase;
     text-align: center;
+    color: #022c43;
 
     margin: 10px;
 
@@ -21,9 +23,9 @@
 
 .contenedor-project:hover{
     box-shadow: 0px 0px 10px 4px#ffd700;
-    background-color: #4d4d4e;
+    background-color: #022c43;
     transition: all 0.8s ease-out;
-    color: white;
+    color: #f7f2d7;
 }
 
 .container-title{
@@ -33,4 +35,9 @@
 
 .container-description{
     padding: 10px;
+}
+
+.button-card.ant-btn-default.ant-btn-background-ghost:hover{
+    border-color: #ffd700;
+    color: #ffd700;
 }
